Prevent certain table cells and headers from wrapping if it would make UI harder to read

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,3 +62,6 @@ body {
   padding-top: 65px;
 }
 
+td.actions {
+  white-space: nowrap;
+}
